objects/Contrapartida_de_contrato__c.object
<CustomObject>
    <fields>
        <fullName>Ano_calendario__c</fullName>
        <label>Ano calendário</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ano_fiscal__c</fullName>
        <label>Ano fiscal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 (Jul/2012 a Jun/2013)</fullName>
                </value>
                <value>
                    <fullName>FY13 (Jul/2013 a Jun/2014)</fullName>
                </value>
                <value>
                    <fullName>FY14 (Jul/2014 a Jun/2015)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonificacao__c</fullName>
        <label>Bonificação</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contrapartida_executada__c</fullName>
        <description>Indique se esta contrapartida já foi comprovada pelo cliente. Anexe a este registro a documentação escaneada.</description>
        <inlineHelpText>Indique se esta contrapartida já foi comprovada pelo cliente. Anexe a este registro a documentação escaneada.</inlineHelpText>
        <label>Contrapartida executada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contrato__c</fullName>
        <label>Contrato</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipLabel>Contrapartidas de contratos_old</relationshipLabel>
        <relationshipName>Contrapartidas_de_contratos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mes_calendario__c</fullName>
        <label>Mês calendário</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 (Janeiro)</fullName>
                </value>
                <value>
                    <fullName>02 (Fevereiro)</fullName>
                </value>
                <value>
                    <fullName>03 (Março)</fullName>
                </value>
                <value>
                    <fullName>04 (Abril)</fullName>
                </value>
                <value>
                    <fullName>05 (Maio)</fullName>
                </value>
                <value>
                    <fullName>06 (Junho)</fullName>
                </value>
                <value>
                    <fullName>07 (Julho)</fullName>
                </value>
                <value>
                    <fullName>08 (Agosto</fullName>
                </value>
                <value>
                    <fullName>09 (Setembro)</fullName>
                </value>
                <value>
                    <fullName>10 (Outubro)</fullName>
                </value>
                <value>
                    <fullName>11 (Novembro)</fullName>
                </value>
                <value>
                    <fullName>12 (Dezembro)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Produto__c</fullName>
        <label>Produto</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_valor_Cash__c</fullName>
        <label>Tipo de valor Cash</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Festas / eventos</fullName>
                </value>
                <value>
                    <fullName>Taylor made</fullName>
                </value>
                <value>
                    <fullName>Contrato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_Cash__c</fullName>
        <label>Valor Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_da_bonificacao__c</fullName>
        <label>Valor da bonificação</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contrapartida de contrato_old</label>
    <nameField>
        <displayFormat>CC{000000}</displayFormat>
        <label>Número da contrapartida</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contrapartidas de contratos_old</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>